--- a/coffee.html
+++ b/coffee.html
@@ -137,10 +137,10 @@
     <hr>
 
     <h2 style="color: #facc15;">📊 Dashboard Preview</h2>
-    <img src="assets/Coffee.gif" alt="Coffee Shop Sales Dashboard GIF" />
-    <img src="assets/Coffee1.png" alt="Coffee Screenshot 1" />
-    <img src="assets/Coffee2.png" alt="Coffee Screenshot 2" />
-    <img src="assets/Coffee3.png" alt="Coffee Screenshot 3" />
+    <img src="assets/Coffeeshop.gif" alt="Coffee Shop Sales Dashboard GIF" />
+    <img src="assets/Coffee1.jpg" alt="Coffee Screenshot 1" />
+    <img src="assets/Coffee2.jpg" alt="Coffee Screenshot 2" />
+    <img src="assets/Coffee3.jpg" alt="Coffee Screenshot 3" />
 
     <a href="https://app.powerbi.com/reportEmbed?reportId=a32bd936-1d7c-46b1-81be-55cb214d6d27&appId=5fe91805-1a90-4e2c-ae69-744906077568&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77" target="_blank" class="btn">
       🔗 View Dashboard (Power BI Access Required)
