--- a/projects.html
+++ b/projects.html
@@ -186,8 +186,9 @@ body::after {
 <body>
   
 <div class="nav">
-  <a href="index.html">🏠 Home</a>
+  <a href="index.html"><i class="fas fa-home"></i> Home</a>
 </div>
+
 
   <h1>My Projects</h1>
 
