--- a/hr.html
+++ b/hr.html
@@ -136,10 +136,10 @@
     <hr>
 
     <h2 style="color: #facc15;">📊 Dashboard Preview</h2>
-    <img src="assets/HR_1.jpg" alt="HR Dashboard Screenshot 1" />
-    <img src="assets/HR_2.jpg" alt="HR Dashboard Screenshot 2" />
-    <img src="assets/HR_3.jpg" alt="HR Dashboard Screenshot 3" />
-    <img src="assets/HR_4.jpg" alt="HR Dashboard Screenshot 4" />
+    <img src="assets/Hr.gif" alt="HR Dashboard Screenshot 1" />
+    <img src="assets/Hr1.png" alt="HR Dashboard Screenshot 2" />
+    <img src="assets/Hr2.png" alt="HR Dashboard Screenshot 3" />
+    <img src="assets/Hr.png" alt="HR Dashboard Screenshot 4" />
 
     <a href="<iframe title="Hr_data_Analysis" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=93172283-26fa-46d7-8095-745258ca4edb&appId=e908c91a-399a-4928-94a5-ba935d833d62&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77" frameborder="0" allowFullScreen="true"></iframe>
       🔗 View Dashboard (Power BI Access Required)
