--- a/projects.html
+++ b/projects.html
@@ -263,7 +263,7 @@ body::after {
     const descriptions = {
       "Pizza Sales Analysis": "This Power BI dashboard provides a deep dive into pizza sales data. It includes metrics like revenue by category, top-selling pizzas, and hourly demand. The data was cleaned using SQL, and insights were visualized using interactive charts and KPIs to support inventory and marketing decisions.",
       "Coffee Shop Sales Analysis": "This project tracks customer trends, revenue growth, and product performance for a fictional coffee shop. Data was analyzed in SQL and visualized in Power BI to deliver business-ready insights for stakeholders. The dashboard uses slicers, KPIs, and custom visuals.",
-      "Bank Customer Churn Analysis": "In this Power BI project, we analyzed customer churn behavior using demographic and transactional data. Key insights include which segments are most likely to churn and how to retain them using actionable strategies like loyalty programs."
+      "Bank Customer Churn Analysis": "In this Power BI project, we analyzed customer churn behavior using demographic and transactional data. Key insights include which segments are most likely to churn and how to retain them using actionable strategies like loyalty programs.",
       "HR Analytics Dashboard": "This Power BI dashboard provides insights into HR data including employee demographics, attrition trends, job satisfaction, and department-wise analysis. It helps HR professionals understand the factors affecting workforce stability and identify areas for policy improvement using clean and interactive visuals.",
     };
 
