--- a/projects.html
+++ b/projects.html
@@ -238,7 +238,7 @@ body::after {
       It enables better understanding of market dynamics and customer behavior."
   data-img="assets/feature_engg_good_bad_sales.jpg"
   data-github="https://github.com/Niks23c/amazon-sales-analysis"
-  data-live="amazon.html">
+  data-live="amazon1.html">
   <img src="assets/feature_engg_good_bad_sales.jpg" alt="Amazon Sales Dashboard"/>
   <h3>Amazon Sales Analysis</h3>
 </div>
