--- a/projects.html
+++ b/projects.html
@@ -242,6 +242,19 @@ body::after {
   <img src="assets/feature_engg_good_bad_sales.jpg" alt="Amazon Sales Dashboard"/>
   <h3>Amazon Sales Analysis</h3>
 </div>
+
+    </div>
+    <div class="project-card powerbi"
+  data-title="Retail Sales Analysis"
+  data-desc="A one-page dynamic Power BI dashboard that delivers advanced retail sales insights using multiple data sources and row-level security (RLS) logic. 
+      Built to support Quarterly Business Review (QBR) presentations with deep visual storytelling."
+  data-img="assets/dashboard.gif"
+  data-github="https://github.com/Niks23c/amazon-sales-analysis"
+  data-live="retail.html">
+  <img src="assets/dashboard.gif" alt="Retail Sales Dashboard"/>
+  <h3>Retail Sales Analysis</h3>
+</div>
+  
   </div>
 
   <!-- Modal -->
@@ -274,7 +287,8 @@ body::after {
       "Coffee Shop Sales Analysis": "This project tracks customer trends, revenue growth, and product performance for a fictional coffee shop. Data was analyzed in SQL and visualized in Power BI to deliver business-ready insights for stakeholders. The dashboard uses slicers, KPIs, and custom visuals.",
       "Bank Customer Churn Analysis": "In this Power BI project, we analyzed customer churn behavior using demographic and transactional data. Key insights include which segments are most likely to churn and how to retain them using actionable strategies like loyalty programs.",
       "HR Analytics Dashboard": "This Power BI dashboard provides insights into HR data including employee demographics, attrition trends, job satisfaction, and department-wise analysis. It helps HR professionals understand the factors affecting workforce stability and identify areas for policy improvement using clean and interactive visuals.",
-      "Amazon Sales Analysis": "This SQL Based Project analyzes Amazon sales data including revenue by state, gender-based product preferences, order trends, and customer ratings. It enables better understanding of market dynamics and customer behavior."
+      "Amazon Sales Analysis": "This SQL Based Project analyzes Amazon sales data including revenue by state, gender-based product preferences, order trends, and customer ratings. It enables better understanding of market dynamics and customer behavior.",
+       "Retail Sales Analysis": "A one-page dynamic Power BI dashboard that delivers advanced retail sales insights using multiple data sources and row-level security (RLS) logic. Built to support Quarterly Business Review (QBR) presentations with deep visual storytelling."
     
     };
 
